--- a/src/stylesheets/MediaQueries.scss
+++ b/src/stylesheets/MediaQueries.scss
@@ -128,7 +128,7 @@
   
   .primary-headline img {
     width: 100%;
-    max-width: 60%;
+    max-width: 70%;
     height: auto;
     margin: 0 auto 0 auto;
     /* min-height: 420px; */
@@ -145,7 +145,7 @@
   }
 
   .mini-headlines {
-    max-width: 60%;
+    max-width: 70%;
     margin: 30px auto 50px auto;
   }
 
